This commit adds interfaces, implementations and test for the following scenario:
Topics covered : Spring core, gradle, java, junit

1.
interface GreetingService {
              String greet();
}

2. GreetingService has 2 implementations - one that returns

"Hello" and another that returns "Hola"

3. MessageService has GreetingService :

class MessageService {

              String getMessage() {
                             return greetingService.greet();
              }
}

4. Inject "Hello" greetingService into

MessageService and assert the output for MessageService in a test case

5. Change MessageService.greetingService to "Hola"

implementation and assert the result in a test case

--- a/build.gradle
+++ b/build.gradle
@@ -12,5 +12,13 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation 'org.springframework:spring-context:5.1.5.RELEASE'
+    implementation 'org.springframework:spring-core:5.1.5.RELEASE'
+    testImplementation "org.junit.jupiter:junit-jupiter-engine:5.5.2"
+    testImplementation "org.junit.platform:junit-platform-runner:1.5.2"
+    testImplementation 'org.springframework:spring-test:5.1.5.RELEASE'
+}
+
+test {
+    useJUnitPlatform()
 }
